# uncertainty-in-models

./: README.md  pyproject.toml  setup.py
resources/data/: data_scientist_home_assignment.csv
scripts/gaussian/: 2d_gaussian_index.py  2d_rbf_prior.py  5d_condition_distribution.py  5d_condition_index.py  5d_gaussian_index.py
src/cfg/dataset/: base.yaml
src/cfg/model/: base.yaml
src/dataset/transform/: base.py  feature.py
src/engine/: model.py
src/models/: __init__.py  estimator.py  predict.py  train.py
src/modules/calibration/: __init__.py  visualizer.py
src/modules/risk/: base.py
src/utils/: __init__.py  serialization.py
src/utils/io/: __init__.py
src/utils/param/: __init__.py  validation.py
uim/cfg/dataset/: base.yaml
uim/dataset/: __init__.py
uim/dataset/transform/: __init__.py  base.py  feature.py
uim/engine/: __init__.py  model.py
uim/models/: __init__.py  estimator.py  predict.py  train.py
uim/models/gaussian/: README.md  base.py
uim/models/gaussian/kernel/: __init__.py  rbf.py
uim/models/gp/: README.md
uim/modules/: __init__.py
uim/modules/calibration/: __init__.py  reliability.py  visualizer.py
uim/modules/calibration/model_selection/: __init__.py  train_test_calib_split.py
uim/modules/calibration/reliability/: __init__.py  base.py  visualizer.py
uim/modules/calibration/reliability/statistic/: __init__.py  binary.py
uim/modules/risk/: __init__.py  base.py  visualizer.py
uim/utils/: __init__.py  path.py  seed.py  serialization.py
uim/utils/io/: format.py  reader.py
uim/utils/param/: validation.py
