[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uim"
version = "0.1.0"
description = "A project for uncertainty in models"
authors = [{ name = "Roni Reznik", email = "reznik.roni@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]

dependencies = [
    "matplotlib==3.8.4",
    "pandas",
    "pyyaml",
    "scikit-learn>=1.4.1.post1"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true  # tried both true and false

[tool.setuptools.packages.find]
where = ["."]
include = ["uim*"]
exclude = ["resources*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "flake8",
]

[tool.mypy]
ignore_missing_imports = true
